[gd_scene load_steps=6 format=3 uid="uid://c8jlv2oiu45hg"]

[ext_resource type="PackedScene" uid="uid://o76gduhspdg" path="res://game/autoload/ui/settings/settings_page.tscn" id="1_iihpb"]
[ext_resource type="Script" uid="uid://bvhn2v86kvlto" path="res://game/autoload/ui/settings/graphics/graphics_settings_page.gd" id="2_i4h3c"]
[ext_resource type="PackedScene" uid="uid://c5gl82w6sfw7u" path="res://game/autoload/ui/settings/select/setting_select_option.tscn" id="3_6s2km"]
[ext_resource type="PackedScene" uid="uid://hqhyvp4gjw8i" path="res://game/autoload/ui/ui_button.tscn" id="4_6s2km"]
[ext_resource type="PackedScene" uid="uid://bibpel52dklny" path="res://game/autoload/ui/settings/select/bool_select_option.tscn" id="4_6v75f"]

[node name="GraphicsSettingsPage" instance=ExtResource("1_iihpb")]
script = ExtResource("2_i4h3c")

[node name="ResolutionSelectOption" parent="." index="0" instance=ExtResource("3_6s2km")]
layout_mode = 2
_setting_name = "Resolution"
_options = Dictionary[StringName, Variant]({
&"1024 x 768": Vector2i(1024, 768),
&"1280 x 720": Vector2i(1280, 720),
&"1366 x 768": Vector2i(1366, 768),
&"1440 x 900": Vector2i(1440, 900),
&"1600 x 900": Vector2i(1600, 900),
&"1920 x 1080": Vector2i(1920, 1080),
&"1920 x 1200": Vector2i(1920, 1200),
&"2560 x 1080": Vector2i(2560, 1080),
&"2560 x 1440": Vector2i(2560, 1440),
&"3440 x 1440": Vector2i(3440, 1440),
&"3840 x 2160": Vector2i(3840, 2160),
&"640 x 480": Vector2i(640, 480),
&"960 x 540": Vector2i(960, 540)
})

[node name="DisplayModeSelectOption" parent="." index="1" instance=ExtResource("3_6s2km")]
layout_mode = 2
_setting_name = "Mode"
_options = Dictionary[StringName, Variant]({
&"Full Screen": 4,
&"Windowed": 0
})

[node name="VSyncSelectOption" parent="." index="2" instance=ExtResource("4_6v75f")]
layout_mode = 2
_setting_name = "VSync"

[node name="ApplyButton" parent="." index="3" instance=ExtResource("4_6s2km")]
layout_mode = 2
text = "Apply"

[connection signal="value_changed" from="ResolutionSelectOption" to="." method="_on_resolution_select_option_value_changed"]
[connection signal="value_changed" from="DisplayModeSelectOption" to="." method="_on_display_mode_select_option_value_changed"]
[connection signal="value_changed" from="VSyncSelectOption" to="." method="_on_v_sync_select_option_value_changed"]
[connection signal="pressed" from="ApplyButton" to="." method="_on_apply_button_pressed"]
